# verba

./: .gitignore  LICENSE  cli.py  pyproject.toml
example_settings/: keys1.tsv  test1.json
tests/: test_adjective.py  test_key.py  test_noun.py  test_other.py  test_question.py  test_setup.py  test_verb.py  test_word.py  word_utils.py
verba/: __main__.py  cli.py  console.py  generator_setup.py  input.py  load.py  parser.py  setup.py  user_input.py  utils.py
verba/data/: endings.tsv  noun_endings.tsv
verba/data/LL/: keys.tsv  nouns.tsv  words.tsv
verba/question/: compose.py  identify.py  identify_generator.py  macron.py  macron_generator.py  question.py  question_generator.py  utils.py  vocab.py  vocab_generator.py
verba/word/: adjective.py  definitions.py  endings.py  inflection_key.py  load_words.py  make.py  noun.py  other.py  utils.py  verb.py  word.py  word_key.py
verbae/: __main__.py  cli.py  input.py
verbae/data/LL/: nouns.tsv
verbae/word/: definitions.py  endings.py  noun.py  word.py  word_type.py
