[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "verba"
version = "0.1.0"
authors = [
    {name = "Brian Houston"},
]
description = "Tool to assist in learning the Latin language"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dependencies = [
    "readchar",
    "rich"
]

[project.scripts]
verba = "verba.cli:main"

[tool.setuptools.package-data]
"verba.data" = ["**"]

[tool.setuptools.packages.find]
include = ["verba*"]
exclude = ["example_settings*", "tests*"]
